--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Resources &amp; Configurations</string>
+    <string name="app_name">Resources and Configurations</string>
     <string name="first_activity_name">First Activity</string>
     <string name="second_activity_name">Second Activity</string>
     <string name="third_activity_name">Third Activity</string>
